Added revied chapers and continued with start of lit study

--- a/glossary.tex
+++ b/glossary.tex
@@ -9,6 +9,7 @@
 \newacronym{NED}{NED}{North East Down}
 
 \newacronym{MRAC}{MRAC}{Model Reference Adaptive Control}
+\newacronym{ARC}{ARC}{Adaptive Robust Control}
 \newacronym{MPC}{MPC}{Model Predictive Control}
 \newacronym{AMPC}{AMPC}{Adaptive Model Predictive Control}
 \newacronym{PID}{PID}{Proportional Integral Derivative}
@@ -53,6 +54,9 @@
 
 \newacronym{DCM}{DCM}{Direct Cosine Matrix}
 \newacronym{ODE}{ODE}{Ordinary Differential Equation}
+
+\newacronym{UAV}{UAV}{Unmanned Aerial Vehicle}
+\newacronym{VTOL}{VTOL}{Vertical Takeoff and Landing}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
