--- a/results/results.tex
+++ b/results/results.tex
@@ -524,6 +524,14 @@
         computes the optimal control action,
         and sends the setpoint to PX4 through the package 'mavros'.
 
+        Plots:
+        CPU vs q
+        RAM vs q
+        CPU vs Ts
+        velocity step
+        % extended dimentions??
+
+        Never could not find viable solution. When would it not find a solution?
 
     \section{Conclusion}
 
