Added missing references

--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -68,7 +68,7 @@
         \author{Kotaru2017} \cite{Kotaru2017} considered a suspended payload system with an elastic cable modelled as a spring-damper system.
         \author{Tang2015a} \cite{Tang2015a} modelled the multirotor-payload system with a hybrid dynamical model to consider aggressive manoeuvres where the cable transitions from taut to slack.
         The transportation of payload loads with flexible cables have also been studied, where the cable is modelled as a set of serially-connected rigid links  \cite{Goodarzi2015} \cite{Goodarzi2014} \cite{Kotaru2018}. 
-        Furthermore, the control of a group of multirotors transporting a single suspended payload have also been considered \cite{Lee2015} \cite{Sanalitro2020} \cite{Klausen2014} \cite{Goodarzi2015}.
+        Furthermore, the control of a group of multirotors transporting a single suspended payload have also been considered in various studies \cite{Lee2015} \cite{Sanalitro2020} \cite{Klausen2014} \cite{Goodarzi2015}.
         
         \paragraph
         From numerous examples in literature, it is clear that the control of multirotors with suspended payloads is a popular research topic.
