Added plot of CPU vs q

--- a/glossary.tex
+++ b/glossary.tex
@@ -57,6 +57,7 @@
 
 \newacronym{UAV}{UAV}{Unmanned Aerial Vehicle}
 \newacronym{VTOL}{VTOL}{Vertical Takeoff and Landing}
+\newacronym{CPU}{CPU}{Central Processing Unit}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
