--- a/results/results.tex
+++ b/results/results.tex
@@ -516,7 +516,7 @@
             % Because the model prediction matches the practical testing data so closely,
             % it is expected that this model will 
             
-   \section{HITL}
+    \FloatBarrier\section{HITL}
 
         \paragraph
         MATLAB is used to generate a \gls{MPC} \gls{ROS} node 
@@ -531,9 +531,11 @@
         velocity step
         % extended dimentions??
 
+        \input{results/plots/CPU_vs_q.tex}
+
         Never could not find viable solution. When would it not find a solution?
 
-    \section{Conclusion}
+    \FloatBarrier\section{Conclusion}
 
 
 }
