--- a/results/results.tex
+++ b/results/results.tex
@@ -20,9 +20,9 @@
     % Furthermore, the suitability of the system identification models
     % for swing damping control will be investigated in simulations.
     % The performance of the swing damping controllers will be evaluated for a range of different system configurations.
-    Furthermore, HITL simulations will be performed to determine whether the proposed hardware can handle the computational complexity of these algorithms.
+    Furthermore, \gls{HITL} simulations will be performed to determine whether the proposed hardware can handle the computational complexity of these algorithms.
     Finally, the practical feasibility of the proposed system identification and control architectures will be discussed.
-    % ?? Add HITL results to this chapter
+    % ?? Add \gls{HITL} results to this chapter
 
     \FloatBarrier\section{Methodology}
         
@@ -533,7 +533,36 @@
 
         \input{results/plots/CPU_vs_q.tex}
 
+        \paragraph
+        Figure~\ref{fig:CPU_vs_q}
+        Explain \%CPU
+
+        \input{results/plots/RAM_vs_q.tex}
+
+        \paragraph
+        Figure~\ref{fig:RAM_vs_q}
+        Explain \%RAM
+
+        \input{results/plots/CPU_vs_Ts.tex}
+
+        \paragraph
+        Figure~\ref{fig:CPU_vs_Ts}
+
         Never could not find viable solution. When would it not find a solution?
+
+        \input{results/plots/HITL_mpc_vel.tex}
+
+        \paragraph
+        Figure~\ref{fig:HITL_mpc_vel}
+
+        \input{results/plots/HITL_mpc_theta.tex}
+
+        \paragraph
+        Figure~\ref{fig:HITL_mpc_theta}
+
+
+        % ?? Check if all plots degrees not radians
+        
 
     \FloatBarrier\section{Conclusion}
 
