Add intro paragraphs and started CPU vs q in HITL section

--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -11,4 +11,15 @@
     
     \section{Software}
 
+    \section{HITL} \label{sec:exp_design_hitl}
+
+    \paragraph
+    MATLAB is used to generate a \gls{MPC} \gls{ROS} node 
+    This \gls{ROS} node receives state feedback from the Gazebo simulator,
+    computes the optimal control action,
+    and sends the setpoint to PX4 through the package 'mavros'.
+
+    \section{Practical flights}
+
+
 }
