--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -64,11 +64,11 @@
 
         \paragraph
         The transportation of various suspended payload configurations have been considered in literature.
-        The classical suspended payload application involves a small payload suspended below the vehicle with rigid cable \cite{Guerrero-Sanchez2017} \cite{Klausen2017} \cite{Ichikawa2018} \cite{DeAngelis2019a} \cite{Erasmus2020} \cite{Slabber2020}. 
+        The classical suspended payload application involves a small payload suspended below the vehicle with rigid cable \cite{Erasmus2020, Slabber2020, Guerrero-Sanchez2017, Klausen2017, Ichikawa2018, DeAngelis2019a}. 
         \author{Kotaru2017} \cite{Kotaru2017} considered a suspended payload system with an elastic cable modelled as a spring-damper system.
         \author{Tang2015a} \cite{Tang2015a} modelled the multirotor-payload system with a hybrid dynamical model to consider aggressive manoeuvres where the cable transitions from taut to slack.
-        The transportation of payload loads with flexible cables have also been studied, where the cable is modelled as a set of serially-connected rigid links  \cite{Goodarzi2015} \cite{Goodarzi2014} \cite{Kotaru2018}. 
-        Furthermore, the control of a group of multirotors transporting a single suspended payload have also been considered in various studies \cite{Lee2015} \cite{Sanalitro2020} \cite{Klausen2014} \cite{Goodarzi2015}.
+        The transportation of payload loads with flexible cables have also been studied, where the cable is modelled as a set of serially-connected rigid links  \cite{Goodarzi2015, Goodarzi2014, Kotaru2018}. 
+        Furthermore, the control of a group of multirotors transporting a single suspended payload have also been considered in various studies \cite{Lee2015, Sanalitro2020, Klausen2014, Goodarzi2015}.
         
         \paragraph
         From numerous examples in literature, it is clear that the control of multirotors with suspended payloads is a popular research topic.
@@ -76,6 +76,7 @@
         This configuration also has the advantage that a load can have an arbitrary shape or size as long as it has an attachment point for a cable.
         However, the suspended payload increases the degrees of underactuation of the system, which makes the control problem challenging \cite{Kotaru2018}.
 
+        % ?? Fi author cite and [12-15] to rather [12,13,14,15]
 \section{Control of a multirotor with a suspended payload}
 
     \subsection{Input shapers}
