--- a/glossary.tex
+++ b/glossary.tex
@@ -58,6 +58,9 @@
 \newacronym{UAV}{UAV}{Unmanned Aerial Vehicle}
 \newacronym{VTOL}{VTOL}{Vertical Takeoff and Landing}
 \newacronym{CPU}{CPU}{Central Processing Unit}
+\newacronym{UART}{UART}{Universal Asynchronous Receiver Transmitter}
+\newacronym{FC}{FC}{Flight Controller}
+\newacronym{USB}{USB}{Universal Serial Bus}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
