--- a/results/plots/training_data_theta_prac.tex
+++ b/results/plots/training_data_theta_prac.tex
@@ -26,14 +26,14 @@
         ]
         \pgfplotsset{cycle list shift=1}
 
-        \addplot+[mark = none, style = solid, ultra thick] 
+        \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = theta.x, col sep = comma] 
         {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
         \addlegendentry{$\theta_N$}
         
         \pgfplotsset{cycle list shift=1}
 
-        \addplot+[mark = none, style = solid, ultra thick] 
+        \addplot+[mark = none, style = solid, thick] 
         table[x = time, y = theta.y, col sep = comma] 
         {results/csv/training_data_Prac_2021-08-23_02_l-0.5_mp-0.2_wind-0.5_XY_steps.csv.csv};
         \addlegendentry{$\theta_E$}
