Added part about HITL Ts

--- a/results/plots/HITL_mpc_vel.tex
+++ b/results/plots/HITL_mpc_vel.tex
@@ -44,6 +44,6 @@
     \end{tikzpicture} 
     
     \caption{Velocity step responses of MPC and PID controllers for \gls{HITL} simulations
-        ($q = 50$, $T_s =$\SI{0.03}{\second})}
+        ($q = 50$, $T_s =$~\SI{0.03}{\second})}
     \label{fig:HITL_mpc_vel}
 \end{figure}
