--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -349,7 +349,7 @@
         This seems to confirm the notion that the Pareto optimal solution 
         is often the most accurate representation of the actual dynamics \cite{Brunton2019d}.
 
-    \subsection{Sample time}
+    \subsection{Sample time} \label{sec:sample_time}
 
         \paragraph
         The sample time, $T_s$, used for system identification is the sample time of the discrete model, 
