--- a/results/plots/prediction_double_pend_white_prac_diff_IC.tex
+++ b/results/plots/prediction_double_pend_white_prac_diff_IC.tex
@@ -5,7 +5,7 @@
             xlabel = Time,
             ylabel = Payload angle,
             x unit = \si{\second},
-            y unit = \si{\radian},
+            y unit = \si{\degree},
             xmin = 0,   xmax = 10,
             ymin = -25,  ymax = 25,
             grid = major,
