--- a/results/plots/prediction_single_pend_white_prac.tex
+++ b/results/plots/prediction_single_pend_white_prac.tex
@@ -5,7 +5,7 @@
             xlabel = Time,
             ylabel = Payload angle,
             x unit = \si{\second},
-            y unit = \si{\radian},
+            y unit = \si{\degree},
             xmin = 0,   xmax = 20,
             ymin = -20,  ymax = 20,
             grid = major,
