--- a/system_id/plots/prediction_double_pend_black.tex
+++ b/system_id/plots/prediction_double_pend_black.tex
@@ -5,9 +5,9 @@
             xlabel = Time,
             ylabel = Payload angle,
             x unit = \si{\second},
-            y unit = \si{\radian},
+            y unit = \si{\degree},
             xmin = 2,   xmax = 30,
-            ymin = -0.2,  ymax = 0.1,
+            ymin = -12.0,  ymax = 6,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -24,19 +24,19 @@
                 Dark2\nextlist
             }
         ]
-        
+        % y expr = \thisrow{} * 57.2958
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = theta, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_single_vel_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
         \addlegendentry{Actual}
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = theta_dmd, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta_dmd} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_single_vel_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
         \addlegendentry{DMDc}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
-        table[x = time, y = theta_havok, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta_havok} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_single_vel_step_m1_0.2_l1_m2_0.1_l2_0.3.csv.csv};
         \addlegendentry{HAVOK}
 
