--- a/system_id/plots/prediction_single_pend_white.tex
+++ b/system_id/plots/prediction_single_pend_white.tex
@@ -5,9 +5,9 @@
             xlabel = Time,
             ylabel = Payload angle,
             x unit = \si{\second},
-            y unit = \si{\radian},
+            y unit = \si{\degree},
             xmin = 0,   xmax = 20,
-            ymin = -0.2,  ymax = 0.1,
+            ymin = -12,  ymax = 6,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,7 +26,7 @@
         ]
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = time, y = theta, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         \addlegendentry{Actual}
 
@@ -41,7 +41,7 @@
         % \addlegendentry{HAVOK}
 
         \addplot+[mark = none, style = dashed, ultra thick] 
-        table[x = time, y = theta_white, col sep = comma] 
+        table[x = time, y expr = \thisrow{theta_white} * 57.2958, col sep = comma] 
         {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
         \addlegendentry{White-box}
 
