Added summary section to results chapter

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -4,7 +4,10 @@
 \label{chap:introduction}
 
 \section{Background}
+
 \section{Project definition and objectives}
+    Use words from evaluation sheet. Like large scope...
 \section{Thesis outline}
+    
 
 
